# url_customizer

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  init.sh  pyproject.toml
alembic/: env.py
alembic/versions/: a16ab12bc1e8_initial_migration.py  ee102b63890d_.py
src/html/: main.html
src/py/: app.py  config.py  db.py  model.py  web.py
